--- a/src/scss/tools/mixin/_shadows.scss
+++ b/src/scss/tools/mixin/_shadows.scss
@@ -9,7 +9,7 @@
 
 //
 // @settings
-$shadow-color: $default-shadow-color;
+$shadow-color: $black;
 $shadow-umbra-opacity: 0.2 !default;
 $shadow-penumbra-opacity: 0.14 !default;
 $shadow-ambient-opacity: 0.12 !default;
